--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         &copy; Copyright <strong><span>HealthGuard</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-         Designed by <a href="#">Manohar & Team</a>
+         Designed by <a href="#">Vijay & Team</a>
       </div>
     </div>
   </footer><!-- End Footer -->
