--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon"><i class="fas fa-hospital-user"></i></div>
-            <h4 class="title"><a href="http://localhost/odlms/admin/login.php" target="_blank">Pathological Lab</a></h4>
+            <h4 class="title"><a href="http://localhost/odlms/login.php" target="_blank">Pathological Lab</a></h4>
             
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="zoom-in" data-aos-delay="200">
