--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>manohar@gmail.com<br>teammate@gmail.com</p>
+                  <p>smaple@gmail.com<br>teammate@gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -246,9 +246,7 @@
       <div class="copyright">
         &copy; Copyright <strong><span>HealthGuard</span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
-         Designed by <a href="#">Vijay & Team</a>
-      </div>
+      
     </div>
   </footer><!-- End Footer -->
 
