--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon"><i class="fas fa-pills"></i></div>
-            <h4 class="title"><a href="https://www.who.int/" target="_blank">Medical Guidelines</a></h4>
+            <h4 class="title"><a href="https://symptom.streamlit.app/" target="_blank">Symptom Checker</a></h4>
             
           </div>
           
